# RayTracingFromQb

./: .gitmodules  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
include/: CApp.hpp  Camera.hpp  Image.hpp  LightBase.hpp  ObjSphere.hpp  ObjectBase.hpp  PointLight.hpp  Ray.hpp  Scene.hpp
src/: CApp.cpp  Camera.cpp  Image.cpp  LightBase.cpp  ObjSphere.cpp  ObjectBase.cpp  PointLight.cpp  Ray.cpp  Scene.cpp  main.cpp
